--- a/todo.txt
+++ b/todo.txt
@@ -1,2 +1,3 @@
 - cursor filckers when resizing window (as it gets out of reach of the element that is used to resizing)
 - there should be lines between ribbon items
+- ADD ESLINT AND PROPTYPES
