--- a/todo.txt
+++ b/todo.txt
@@ -2,3 +2,4 @@
 - font-family
 - hovering mouse over canvas still causes some unwanted rerenders
 - Dropdown for some reason now have both appearance and disappearance animated, although only disappearance should be animated
+- the way some flags are passed to Window (through PainXPlatform) is somewhat confusing (default values)
