--- a/todo.txt
+++ b/todo.txt
@@ -4,3 +4,4 @@
 - Dropdown for some reason now have both appearance and disappearance animated, although only disappearance should be animated
 - if buttons werent able to receive click events when window is not focused that would get rid of minor visual glitches and be consistent with OG paint
 - adjust cursor centers (used in variables.css), as theses should be slightly different depending on canvasZoom
+- brushes should have shape indicating where they will be painting (smiliar to eraser)
