--- a/todo.txt
+++ b/todo.txt
@@ -5,3 +5,4 @@
 - if buttons werent able to receive click events when window is not focused that would get rid of minor visual glitches and be consistent with OG paint
 - adjust cursor centers (used in variables.css), as theses should be slightly different depending on canvasZoom
 - brushes should have shape indicating where they will be painting (smiliar to eraser)
+- when going into full screen window mode, rulers dont adjust size until render is caused by eg. moving mouse over canvas
